--- a/PROJECT_Inventory_Management.ipynb
+++ b/PROJECT_Inventory_Management.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection= pymysql.connect(host='LOCALHOST',user='root',password='@Jayjoshi555@')"
+    "connection= pymysql.connect(host='LOCALHOST',user='root',password='your password')"
    ]
   },
   {
